// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> renders with a fraction indicator 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Slider)
    classNames={
      Object {
        "indicator": Object {
          "bullets": "bullet-class",
          "fraction": "fraction-class",
        },
      }
    }
    indicators={true}
    maxIndicators={2}
  >
    <Slider
      autoPlay={false}
      className=""
      classNames={
        Object {
          "indicator": Object {
            "bullets": "bullet-class",
            "fraction": "fraction-class",
          },
        }
      }
      controls={false}
      disabled={false}
      dispatch={[Function]}
      historyPath={null}
      indicators={true}
      initialSlide={0}
      interval={3000}
      loop={false}
      maxIndicators={2}
      onSlideChange={null}
      rebuildOnUpdate={false}
      slidesPerView={1}
      snapItems={true}
    >
      <div
        className="css-1hlki0z "
      >
        <ReactIdSwiper
          autoplay={null}
          containerClass="sg-swiper-container css-rdsogp "
          freeMode={false}
          initialSlide={0}
          loop={false}
          nextButton={null}
          onInit={[Function]}
          onSlideChangeEnd={[Function]}
          onTouchStart={[Function]}
          onTransitionEnd={[Function]}
          onTransitionStart={[Function]}
          pagination=".fraction-class"
          paginationModifierClass="sg-swiper-pagination-"
          paginationType="fraction"
          prevButton={null}
          rebuildOnUpdate={false}
          slideClass="sg-swiper-slide"
          slidesPerView={1}
          wrapperClass="swiper-wrapper"
        >
          <div
            className="sg-swiper-container css-rdsogp "
          >
            <div
              className="swiper-wrapper"
            >
              <div
                className="sg-swiper-slide css-1l9a57c "
                data-test-id="Slider"
                key=".$0_0"
              >
                <SliderItem
                  key="0"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <div />
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-1l9a57c "
                data-test-id="Slider"
                key=".$1_1"
              >
                <SliderItem
                  key="1"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <div />
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-1l9a57c "
                data-test-id="Slider"
                key=".$2_2"
              >
                <SliderItem
                  key="2"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <div />
                  </div>
                </SliderItem>
              </div>
            </div>
            <div
              className="fraction-class "
            />
          </div>
        </ReactIdSwiper>
      </div>
    </Slider>
  </Connect(Slider)>
</Provider>
`;

exports[`<Slider /> renders with bullet indicators 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Slider)
    classNames={
      Object {
        "indicator": Object {
          "bullets": "bullet-class",
          "fraction": "fraction-class",
        },
      }
    }
    indicators={true}
  >
    <Slider
      autoPlay={false}
      className=""
      classNames={
        Object {
          "indicator": Object {
            "bullets": "bullet-class",
            "fraction": "fraction-class",
          },
        }
      }
      controls={false}
      disabled={false}
      dispatch={[Function]}
      historyPath={null}
      indicators={true}
      initialSlide={0}
      interval={3000}
      loop={false}
      maxIndicators={null}
      onSlideChange={null}
      rebuildOnUpdate={false}
      slidesPerView={1}
      snapItems={true}
    >
      <div
        className="css-1hlki0z "
      >
        <ReactIdSwiper
          autoplay={null}
          containerClass="sg-swiper-container css-rdsogp "
          freeMode={false}
          initialSlide={0}
          loop={false}
          nextButton={null}
          onInit={[Function]}
          onSlideChangeEnd={[Function]}
          onTouchStart={[Function]}
          onTransitionEnd={[Function]}
          onTransitionStart={[Function]}
          pagination=".bullet-class"
          paginationModifierClass="sg-swiper-pagination-"
          paginationType="bullets"
          prevButton={null}
          rebuildOnUpdate={false}
          slideClass="sg-swiper-slide"
          slidesPerView={1}
          wrapperClass="swiper-wrapper"
        >
          <div
            className="sg-swiper-container css-rdsogp "
          >
            <div
              className="swiper-wrapper"
            >
              <div
                className="sg-swiper-slide css-1l9a57c "
                data-test-id="Slider"
                key=".$0_0"
              >
                <SliderItem
                  key="0"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <div />
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-1l9a57c "
                data-test-id="Slider"
                key=".$1_1"
              >
                <SliderItem
                  key="1"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <div />
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-1l9a57c "
                data-test-id="Slider"
                key=".$2_2"
              >
                <SliderItem
                  key="2"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <div />
                  </div>
                </SliderItem>
              </div>
            </div>
            <div
              className="bullet-class "
            />
          </div>
        </ReactIdSwiper>
      </div>
    </Slider>
  </Connect(Slider)>
</Provider>
`;

exports[`<Slider /> renders with children 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Slider)>
    <Slider
      autoPlay={false}
      className=""
      classNames={Object {}}
      controls={false}
      disabled={false}
      dispatch={[Function]}
      historyPath={null}
      indicators={false}
      initialSlide={0}
      interval={3000}
      loop={false}
      maxIndicators={null}
      onSlideChange={null}
      rebuildOnUpdate={false}
      slidesPerView={1}
      snapItems={true}
    >
      <div
        className="css-1hlki0z "
      >
        <ReactIdSwiper
          autoplay={null}
          containerClass="sg-swiper-container css-rdsogp "
          freeMode={false}
          initialSlide={0}
          loop={false}
          nextButton={null}
          onInit={[Function]}
          onSlideChangeEnd={[Function]}
          onTouchStart={[Function]}
          onTransitionEnd={[Function]}
          onTransitionStart={[Function]}
          pagination={null}
          paginationModifierClass="sg-swiper-pagination-"
          paginationType="bullets"
          prevButton={null}
          rebuildOnUpdate={false}
          slideClass="sg-swiper-slide"
          slidesPerView={1}
          wrapperClass="swiper-wrapper"
        >
          <div
            className="sg-swiper-container css-rdsogp "
          >
            <div
              className="swiper-wrapper"
            >
              <div
                className="sg-swiper-slide css-1l9a57c "
                data-test-id="Slider"
                key=".$0_0"
              >
                <SliderItem
                  key="0"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <div />
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-1l9a57c "
                data-test-id="Slider"
                key=".$1_1"
              >
                <SliderItem
                  key="1"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <div />
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-1l9a57c "
                data-test-id="Slider"
                key=".$2_2"
              >
                <SliderItem
                  key="2"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <div />
                  </div>
                </SliderItem>
              </div>
            </div>
          </div>
        </ReactIdSwiper>
      </div>
    </Slider>
  </Connect(Slider)>
</Provider>
`;

exports[`<Slider /> renders with controls 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Slider)
    controls={true}
  >
    <Slider
      autoPlay={false}
      className=""
      classNames={Object {}}
      controls={true}
      disabled={false}
      dispatch={[Function]}
      historyPath={null}
      indicators={false}
      initialSlide={0}
      interval={3000}
      loop={false}
      maxIndicators={null}
      onSlideChange={null}
      rebuildOnUpdate={false}
      slidesPerView={1}
      snapItems={true}
    >
      <div
        className="css-1hlki0z "
      >
        <ReactIdSwiper
          autoplay={null}
          containerClass="sg-swiper-container css-rdsogp "
          freeMode={false}
          initialSlide={0}
          loop={false}
          nextButton=".swiper-button-next"
          onInit={[Function]}
          onSlideChangeEnd={[Function]}
          onTouchStart={[Function]}
          onTransitionEnd={[Function]}
          onTransitionStart={[Function]}
          pagination={null}
          paginationModifierClass="sg-swiper-pagination-"
          paginationType="bullets"
          prevButton=".swiper-button-prev"
          rebuildOnUpdate={false}
          slideClass="sg-swiper-slide"
          slidesPerView={1}
          wrapperClass="swiper-wrapper"
        >
          <div
            className="sg-swiper-container css-rdsogp "
          >
            <div
              className="swiper-wrapper"
            >
              <div
                className="sg-swiper-slide css-1l9a57c "
                data-test-id="Slider"
                key=".$0_0"
              >
                <SliderItem
                  key="0"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <div />
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-1l9a57c "
                data-test-id="Slider"
                key=".$1_1"
              >
                <SliderItem
                  key="1"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <div />
                  </div>
                </SliderItem>
              </div>
              <div
                className="sg-swiper-slide css-1l9a57c "
                data-test-id="Slider"
                key=".$2_2"
              >
                <SliderItem
                  key="2"
                >
                  <div
                    className="css-10a4qrv"
                  >
                    <div />
                  </div>
                </SliderItem>
              </div>
            </div>
            <div
              className="swiper-button-next "
            />
            <div
              className="swiper-button-prev "
            />
          </div>
        </ReactIdSwiper>
      </div>
    </Slider>
  </Connect(Slider)>
</Provider>
`;
